force-app/main/default/objects/Marketing_Program_District__c/Marketing_Program_District__c.object-meta.xml
<CustomObject>
    <label>Marketing Program District</label>
    <nameField>
        <displayFormat>MPD-{0000000}</displayFormat>
        <label>Marketing Program District Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Program Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>