force-app/main/default/objects/Marketing_Program_District__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Marketing Program Districts</relationshipLabel>
    <relationshipName>Market_Program_Districts</relationshipName>
    <type>Lookup</type>
</CustomField>