force-app/main/default/objects/Marketing_Program_District__c/fields/Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program__c</fullName>
    <label>Marketing Program</label>
    <referenceTo>Marketing_Program__c</referenceTo>
    <relationshipName>Market_Program_Districts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>