force-app/main/default/objects/Marketing_Program_District__c/fields/Marketing_Program_Recruited_By__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program_Recruited_By__c</fullName>
    <formula>TEXT(Marketing_Program__r.Recruited_By__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Program Recruited By</label>
    <type>Text</type>
</CustomField>