force-app/main/default/objects/Marketing_Program_District__c/fields/Marketing_Program_Scope__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program_Scope__c</fullName>
    <formula>&#39;&#39;</formula>
    <label>Marketing Program Scope</label>
    <type>Text</type>
</CustomField>